--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Pixel Peter"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/PixelPeter 1.1.0.exe"
+export_path="../../../Downloads/Pixel Peter 1.2.0/PixelPeter 1.2.0.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -19,7 +19,7 @@ script_export_mode=2
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release="1.1.0"
+custom_template/release=""
 debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
@@ -32,16 +32,16 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="res://assets/Icons/pixelpeter_icon.ico"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
+application/company_name="Pixel Pimps"
 application/product_name="Pixel Peter"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/file_description="Pixel Peter - the wonderful adventure of a man with weird feet and/or legs."
+application/copyright="Pixel Pimps"
+application/trademarks="Pixel Peter, the word \"scrumptious\", Pixel Pedro"
 application/export_angle=0
 application/export_d3d12=0
 application/d3d12_agility_sdk_multiarch=true
@@ -62,3 +62,45 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+
+[preset.1]
+
+name="Pixel Peter"
+platform="Web"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../../Downloads/Pixel Peter 1.2.0/PixelPeter 1.2.0.html"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/extensions_support=false
+variant/thread_support=false
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/export_icon=true
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/ensure_cross_origin_isolation_headers=true
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144="res://assets/Icons/pixelpeter_icon 144p.png"
+progressive_web_app/icon_180x180="res://assets/Icons/pixelpeter_icon 180p.png"
+progressive_web_app/icon_512x512="res://assets/Icons/pixelpeter_icon 512p.png"
+progressive_web_app/background_color=Color(1, 1, 1, 1)
