--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/Pixel Peter 1.2.0/PixelPeter 1.2.0.html"
+export_path="../../../Downloads/Pixel Peter 1.2.0/Pixel Peter Web 1.2.0/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -95,7 +95,7 @@ html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
 progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
