Discord rich presence + Godot version upgrade
Tilføjede Discord rich presence til spillet, så folk nu kan se, at man spiller spillet, hvis man spiller det på selve computeren. Fiksede en bug med menu-knappen på game-over skærmen (gik ud af spillet før pga et forkert signal)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
+
+# Filen med spillets Discord app-id i, samt funktionerne for setting af rich presence detaljer.
+scripts/discord_richpresence.gd
+scripts/discord_richpresence.gd.uid
