--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,9 +9,11 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/Pixel Peter 1.2.0/PixelPeter 1.2.0.exe"
+export_path="../../Pixel Peter 1.2.1 Windows/PixelPeter 1.2.1.exe"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -25,16 +27,16 @@ binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
-codesign/enable=false
+codesign/enable=true
 codesign/timestamp=true
 codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
-codesign/description=""
+codesign/description="Pixel Peter by Duirky, El Hebsito and Big Mac"
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
 application/icon="res://assets/Icons/pixelpeter_icon.ico"
 application/console_wrapper_icon=""
-application/icon_interpolation=4
+application/icon_interpolation=0
 application/file_version=""
 application/product_version=""
 application/company_name="Pixel Pimps"
@@ -68,15 +70,17 @@ Remove-Item -Recurse -Force '{temp_dir}'"
 name="Pixel Peter"
 platform="Web"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Downloads/Pixel Peter 1.2.0/Pixel Peter Web 1.2.0/index.html"
+export_path="../../Pixel Peter 1.2.1 Windows/Web/index.html"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -99,7 +103,7 @@ progressive_web_app/enabled=true
 progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
-progressive_web_app/orientation=0
+progressive_web_app/orientation=1
 progressive_web_app/icon_144x144="res://assets/Icons/pixelpeter_icon 144p.png"
 progressive_web_app/icon_180x180="res://assets/Icons/pixelpeter_icon 180p.png"
 progressive_web_app/icon_512x512="res://assets/Icons/pixelpeter_icon 512p.png"
