--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 # Filen med spillets Discord app-id i, samt funktionerne for setting af rich presence detaljer.
 scripts/discord_richpresence.gd
 scripts/discord_richpresence.gd.uid
+addons/discord-rpc-gd/bin/windows/~discord_game_sdk_binding_debug.dll
